tests/lean/record_rec_protected.lean.expected.out
record_rec_protected.lean:8:7: error: unknown identifier 'rec'
â‡ : ?M_1
